--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
     "firebase": "^9.17.1",
     "http-proxy-middleware": "^2.0.6",
+    "js-file-download": "^0.4.12",
     "morgan": "^1.10.0",
     "path-browserify": "^1.0.1",
-    "razorpay": "^2.8.6",
+    "razorpay": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
