--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iiitu_snapshots",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://iiitusnapshotbackend.onrender.com/api/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -57,5 +58,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devServer":{
+    "disableHostCheck":true
   }
+  
 }
