proxy/aceess token

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iiitu_snapshots",
   "version": "0.1.0",
   "private": true,
+  "proxy":"https://iiitusnapshotbackend.onrender.com",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
