--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,6 @@
 FIREBASE="AIzaSyCXKMDZ3W24Y4FvmVhmXskHK4g_g9wZP-M"
 # razorpay
 RZP_KEY_ID=rzp_live_gcVbNkWkGPACRM
+
+
+BACKEND_URL="https://iiitusnapshotbackend.onrender.com/api"
