responsive nav and menu bar

--- a/src/.env
+++ b/src/.env
@@ -3,4 +3,5 @@ FIREBASE="AIzaSyCXKMDZ3W24Y4FvmVhmXskHK4g_g9wZP-M"
 RZP_KEY_ID=rzp_live_gcVbNkWkGPACRM
 
 
+# BACKEND_URL="http://localhost:8800/api"
 BACKEND_URL="https://iiitusnapshotbackend.onrender.com/api"
