--- a/src/.env
+++ b/src/.env
@@ -4,4 +4,4 @@ RZP_KEY_ID=rzp_live_gcVbNkWkGPACRM
 
 
 # BACKEND_URL="http://localhost:8800/api"
-BACKEND_URL="https://iiitusnapshotbackend.onrender.com/api"
+BACKEND_URL=https://iiitusnapshotbackend.onrender.com/api
